--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body{
      background: #00000047;
      color: white;
      opacity: 0;
+     border-radius: 2px;
      transition: opacity .5s ease-out;
 }
 
